--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
       //"noEmit": true,
       "moduleResolution": "node",
       // 厳密モードとして設定
+      "declaration": true,
       "strict": true,
       "outDir":"./js",
       "allowSyntheticDefaultImports":true
