--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "tsc": "npx tsc",
-    "build": "npx tsc",
+    "webpack": "echo no-webpack",
+    "webpack-dev": "echo no-webpack",
     "test": "npx http-server -o js/test/index.html"
   },
   "devDependencies": {
